# sort_demo

./: COPYING  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  sort_demo.1
autom4te.cache/: output.0  traces.0
data/: Makefile.am  Makefile.in  imgs.xcf
data/.svn/: entries
data/.svn/text-base/: Makefile.am.svn-base  menu0.bmp.svn-base  menu1.bmp.svn-base
src/: Makefile.am  Makefile.in  array.c  array.h  dialog.c  dialog.h  engine.c  engine.h  layer.c  layer.h  log.c  log.h  main.c  menu.c  menu.h  object.c  object.h  sprite.c  sprite.h  sprite_impl.h  stdinc.h  text.c  text.h  video.c  video.h
src/.svn/: entries
src/.svn/text-base/: Makefile.am.svn-base  array.c.svn-base  array.h.svn-base  dialog.c.svn-base  dialog.h.svn-base  engine.c.svn-base  engine.h.svn-base  layer.c.svn-base  layer.h.svn-base  log.c.svn-base  log.h.svn-base  main.c.svn-base  menu.c.svn-base  menu.h.svn-base  object.c.svn-base  object.h.svn-base  sprite.c.svn-base  sprite.h.svn-base  sprite_impl.h.svn-base  stdinc.h.svn-base  text.c.svn-base  text.h.svn-base  video.c.svn-base  video.h.svn-base
