dnl $Id: configure.in 21 2009-08-28 23:44:56Z gallows $
dnl
dnl Copyright (C) 2009 Sergio Perticone.
dnl All rights reserved.
dnl

dnl Base settings:
AC_PREREQ(2.61)

AC_INIT(src/main.c)
AC_CONFIG_HEADERS(config.h)

dnl Package name and version number:
PACKAGE=sort_demo
VERSION=svn21

dnl Package name and version number:
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Checks for programs:
AC_PROG_CC
AC_PROG_INSTALL
PKG_PROG_PKG_CONFIG

dnl Checks for libraries:
PKG_CHECK_MODULES(sdl, sdl)

AC_CHECK_LIB([SDL_ttf], [TTF_RenderText_Solid])
if test	x"$ac_cv_lib_SDL_ttf_TTF_RenderText_Solid" = x"no"; then
   have_ttf=no
   AC_MSG_WARN(Library SDL_ttf not found.)
else
   have_ttf=yes
fi

dnl data/Makefile.am and src/Makefile.am need this one:
AM_CONDITIONAL(HAVE_LIBSDL_TTF, test $have_ttf = yes)

AC_HEADER_STDBOOL
AC_FUNC_ALLOCA

dnl Create makefiles:
AC_OUTPUT( Makefile
	   data/Makefile
	   src/Makefile )
